# portable-python

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIGURATION.md  DEVELOP.md  Dockerfile  LICENSE  MANIFEST.in  README.rst  SECURITY.md  lock-deps.sh  portable-python-3.6.yml  portable-python.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: macos.yml  release.yml  tests.yml
retired/: README.md  tkinter.py  toolchain.py
scripts/: bashrc.sh  portable-python-update-external-libraries.sh  portable-python.sh
src/portable_python/: __init__.py  __main__.py  _inspect.py  cli.py  config.py  cpython.py  inspect.py  inspector.py  setup.py  tracking.py  versions.py
src/portable_python/builder/: __init__.py  clibs.py  compression.py  db.py  python.py  tcl.py  x11.py
tests/: conftest.py  sample-config-github.yml  sample-config1.yml  sample-config2.yml  sample-incomplete.yml  test_build.py  test_cleanup.py  test_cli.py  test_failed.py  test_inspect.py  test_inspector.py  test_invoker.py  test_list.py  test_prefix.py  test_recompress.py  test_report.py  test_setup.py
tests/config/: macos-arm64.yml  macos.yml
