[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "portable-python"
dynamic = ["version"]
description = "Portable python binaries"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Zoran Simic", email = "zoran@simicweb.com"},
]
keywords = ["python", "portable", "binary"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dependencies = [
    "click<9",
    "pyyaml<7",
    "requests<3",
    "runez<6",
    "urllib3<3",
]

[dependency-groups]
test = [
    "pytest-cov",
]
dev = [
    { include-group = "test" },
]

[project.scripts]
portable-python = "portable_python.__main__:main"

[project.urls]
Source = "https://github.com/codrsquad/portable-python"

[tool.coverage.run]
concurrency = ["thread"]
data_file = ".tox/.coverage"
patch = ["subprocess"]

[tool.coverage.xml]
output = ".tox/test-reports/coverage.xml"

[tool.coverage.html]
directory = ".tox/test-reports/htmlcov"

[tool.pytest.ini_options]
cache_dir = ".tox/.cache"

[tool.ruff]
cache-dir = ".tox/.ruff_cache"
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "A",   # flake8-builtins
#    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "D",   # pydocstyle
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "EM",  # flake8-errmsg
    "ERA", # eradicate
    "EXE", # flake8-executable
    "F",   # pyflakes
    "FLY", # flynt
    "G",   # flake8-logging-format
    "I",   # isort
    "INT", # flake8-gettext
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PT", # flake8-pytest
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "RUF", # ruff-specific
    "S",   # flake8-bandit
#    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "T10", # flake8-debugger
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
#    "TD", # flake8-todos
    "TRY", # tryceratops
    "W",   # pycodestyle warnings
]
ignore = [
    # TODO: gradually remove these (document all the things)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D200",  # One-line docstring should fit on one line with quotes
    "D205",  # 1 blank line required between summary line and description
    "D400",  # First line should end with a period
    # Not useful:
    "RET503",  # Missing explicit `return` at the end of function able to return non-`None` value
]

[tool.ruff.lint.isort]
order-by-type = false

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S",  # No security checks for tests
]
